# Fade

./: CMakeLists.txt  README.md
ini/: general.ini
resources/: player_aura.xcf  powerup_laser.xcf  projectile.psd
resources/shader/: light.gs  light.ps  light.vs
src/: actor.cpp  actor.hpp  camera.hpp  centeredsprite.hpp  config.cpp  config.hpp  constants.hpp  controller.cpp  controller.hpp  creditstate.cpp  creditstate.hpp  gamestate.hpp  gui.cpp  gui.hpp  item.cpp  item.hpp  lightsys.cpp  lightsys.hpp  lobbystate.cpp  lobbystate.hpp  main.cpp  mainstate.cpp  mainstate.hpp  math.hpp  menustate.cpp  menustate.hpp  optionstate.cpp  optionstate.hpp  pawn.cpp  pawn.hpp  poststate.cpp  poststate.hpp  projectile.cpp  projectile.hpp  resourcemanager.cpp  resourcemanager.hpp  stats.cpp  stats.hpp  utils.hpp  wall.cpp  (+3 more)
src/input/: actions.hpp  gamepadinputmanager.cpp  gamepadinputmanager.hpp  inputmanager.hpp
